unpackaged/main/default/objects/pse__Schedule_Exception__c/pse__Schedule_Exception__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ScheduleExceptionHelp</customHelpPage>
    <description>Specifies an exception from the standard daily hours worked by a resource on an assignment. Schedule exceptions can be created per day or for any duration that lies within an existing schedule. Created automatically when you select a scheduling strategy for an assignment, edit an existing scheduling strategy using the assignment Edit Schedule button, or edit a schedule in the Resource or Project Planners. If configured, a resource can edit schedules on the Timecard Entry page, in the Schedules section.</description>
    <label>Schedule Exception</label>
    <nameField>
        <displayFormat>SchedException{000000000}</displayFormat>
        <label>Schedule Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>