unpackaged/main/default/objects/pse__Schedule_Exception__c/fields/pse__Exception_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Exception_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enter the default number of hours to use if no value is given for an individual day. For example, if this value is 2 and no value for Monday Hours is supplied, the number of hours for Monday will be treated as 2.</description>
    <inlineHelpText>Enter the default number of hours to use if no value is given for an individual day. For example, if this value is 2 and no value for Monday Hours is supplied, the number of hours for Monday will be treated as 2.</inlineHelpText>
    <label>Default Exception Hours Per Day</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>