unpackaged/main/default/objects/pse__Schedule_Exception__c/fields/pse__Friday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Friday_Start_Time__c</fullName>
    <description>Friday Start Time is the scheduled start time on the indicated day.</description>
    <inlineHelpText>Friday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
    <label>Friday Start Time</label>
    <type>DateTime</type>
</CustomField>