unpackaged/main/default/objects/pse__Schedule_Exception__c/fields/pse__Monday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Monday_End_Time__c</fullName>
    <description>Monday End Time is the scheduled end time on the indicated day.</description>
    <inlineHelpText>Monday End Time is the scheduled end time on the indicated day.</inlineHelpText>
    <label>Monday End Time</label>
    <type>DateTime</type>
</CustomField>