unpackaged/main/default/objects/pse__Schedule_Exception__c/fields/pse__Monday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Monday_Start_Time__c</fullName>
    <description>Monday Start Time is the scheduled start time on the indicated day.</description>
    <inlineHelpText>Monday Start Time is the scheduled start time on the indicated day.</inlineHelpText>
    <label>Monday Start Time</label>
    <type>DateTime</type>
</CustomField>