unpackaged/main/default/objects/pse__Schedule_Exception__c/fields/pse__Saturday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Saturday_End_Time__c</fullName>
    <description>Saturday End Time is the scheduled end time on the indicated day.</description>
    <inlineHelpText>Saturday End Time is the scheduled end time on the indicated day.</inlineHelpText>
    <label>Saturday End Time</label>
    <type>DateTime</type>
</CustomField>