unpackaged/main/default/objects/pse__Schedule_Exception__c/fields/pse__Sunday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Sunday_End_Time__c</fullName>
    <description>Sunday End Time is the scheduled end time on the indicated day.</description>
    <inlineHelpText>Sunday End Time is the scheduled end time on the indicated day.</inlineHelpText>
    <label>Sunday End Time</label>
    <type>DateTime</type>
</CustomField>