unpackaged/main/default/objects/pse__Schedule_Exception__c/fields/pse__Tuesday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Tuesday_End_Time__c</fullName>
    <description>Tuesday End Time is the scheduled end time on the indicated day.</description>
    <inlineHelpText>Tuesday End Time is the scheduled end time on the indicated day.</inlineHelpText>
    <label>Tuesday End Time</label>
    <type>DateTime</type>
</CustomField>