unpackaged/main/default/objects/pse__Schedule_Exception__c/fields/pse__Wednesday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Wednesday_End_Time__c</fullName>
    <description>Wednesday End Time is the scheduled end time on the indicated day.</description>
    <inlineHelpText>Wednesday End Time is the scheduled end time on the indicated day.</inlineHelpText>
    <label>Wednesday End Time</label>
    <type>DateTime</type>
</CustomField>