unpackaged/main/default/objects/pse__Schedule_Exception__c/fields/pse__Wednesday_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Wednesday_Hours__c</fullName>
    <label>Wednesday Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>