unpackaged/main/default/objects/pse__Schedule_Exception__c/validationRules/pse__check_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__check_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>pse__End_Date__c &lt; pse__Date__c</errorConditionFormula>
    <errorDisplayField>pse__End_Date__c</errorDisplayField>
    <errorMessage>End date cannot occur before start date</errorMessage>
</ValidationRule>